infra/network-policies/deny/auth.yaml
# Default Deny Ingress - auth
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: auth
spec:
  podSelector: {}
  policyTypes:
    - Ingress
