infra/network-policies/deny/linkerd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: linkerd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
